# AllrisBot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
allrisbot/: Cargo.toml
allrisbot/src/: main.rs
allrisbot/src/allris/: mod.rs
allrisbot/src/bot/: command_cancel.rs  command_help.rs  command_privacy.rs  command_remove_rule.rs  command_rules.rs  command_start.rs  command_target.rs  get_updates.rs  macros.rs  mod.rs  privacy.html
allrisbot/src/redis_scripts/: migrate_chat.lua
bot-utils/: Cargo.toml
bot-utils/src/: broadcasting.rs  channel.rs  command.rs  keyboard.rs  lib.rs  response.rs  updates.rs
src/: admin.rs  allris_scraper.rs  bot_commands.rs  broadcasting.rs  database.rs  dispatcher.rs  feed.rs  lru_cache.rs  main.rs  message_queue.rs  message_sender.rs  types.rs  updater.rs
src/allris/: html.rs  mod.rs  oparl.rs
src/bot/: admin.rs  chat_shared.rs  command_cancel.rs  command_help.rs  command_new_rule.rs  command_privacy.rs  command_remove_all_rules.rs  command_remove_rule.rs  command_rules.rs  command_start.rs  command_target.rs  commands.rs  get_updates.rs  keyboard.rs  macros.rs  mod.rs  privacy.html  text_received.rs
src/broadcasting/: lru_cache.rs  message_sender.rs  scheduled_message.rs
src/outgoing/: dispatcher.rs  mod.rs
src/redis_scripts/: acknowledge_message.lua  add_subscription.lua  hpop.lua  migrate_chat.lua  queue_messages.lua  schedule_broadcast.lua  unacknowledge_message.lua
telegram-message-builder/: Cargo.toml  README.md
telegram-message-builder-macro/: Cargo.toml  LICENSE-MIT  README.md
telegram-message-builder-macro/src/: lib.rs
telegram-message-builder/src/: lib.rs
