[package]
name = "allrisbot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
env_logger = "0.11"
futures-util = "0.3"
log = "0.4"
rand = "0.9.0"
redis = { version = "0.29", default-features = false, features = ["keep-alive", "tokio-comp", "script", "json"] }
reqwest = { version = "0.12", features = ["json"] }
scraper = { version = "0.23", default-features = false }
serde = "1"
serde_json = "1.0"
teloxide = { version = "0.13", features = ["macros"] }
thiserror = "2"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-retry = "0.3"
url = "2.5"

[features]
feed_from_file = []
